--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^7.3.11",
+    "@graphql-tools/load": "^7.5.10",
+    "@graphql-tools/schema": "^8.3.10",
+    "apollo-server": "^3.6.7",
+    "graphql": "^16.4.0"
   }
 }
